Added answer key

--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
 
     <script src="Javascript-linking/index_link.js"></script>
     
+
+
+            \\ CORRECT ANSWERS:
+                \\ USERNAME: ANY
+                \\ AGE: 13 OR OLDER
+                \\ COLOR: ANY
+                \\ VOLUME: ANY
+                \\ SUBSCRIBE TO NEWSLETTER: CHECKED
+                \\ MODE: DARK
+
 </body>
 
 </html>
