Fixed error with answer key displaying on webpage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+            <!--CORRECT ANSWERS:
+             USERNAME: ANY
+             AGE: 13 OR OLDER
+             COLOR: ANY
+             VOLUME: ANY
+             SUBSCRIBE TO NEWSLETTER: CHECKED
+               MODE: DARK
+            --> 
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -203,15 +214,6 @@
 
     <script src="Javascript-linking/index_link.js"></script>
     
-
-
-            \\ CORRECT ANSWERS:
-                \\ USERNAME: ANY
-                \\ AGE: 13 OR OLDER
-                \\ COLOR: ANY
-                \\ VOLUME: ANY
-                \\ SUBSCRIBE TO NEWSLETTER: CHECKED
-                \\ MODE: DARK
 
 </body>
 
