--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
 
 
             <!--CORRECT ANSWERS:
@@ -74,6 +75,9 @@
             color: #0f0;
         }
 
+        body {
+            font-family: 'Cascadia Code', Consolas, "Courier New", monospace;
+        }
 
     </style>
 </head>
