--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 
 <body>
-    <h1>Input Element Challenge</h1>
+    <h1>INPUT ELEMENT CHALLENGE</h1>
 
     <section id="part1">
         <h2>PART 1: TEXT AND NUMBER INPUTS</h2>
