--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="CSS/style-main.css">
   <link rel="stylesheet" href="CSS/buttons.css">
+  <link rel="stylesheet" href="secret/css/secret2.css">
 </head>
 
 <body>
@@ -22,6 +23,7 @@
   <nav>
     <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
+    <button id="secret-btn1">ENTER</button>
   </nav>
 
   <section id="links">
@@ -56,8 +58,10 @@
     <audio controls src="audio/beepbox.wav"></audio>
   </section>
 
+
+
   <script src="Javascript/Javascript-linking/index_link.js"></script>
-  <script src="Javascript/secret/secret.js"></script>
+  <script src="secret/javascript/secret.js"></script>
 </body>
 
 </html>
