Added display javascript to secret

--- a/main.html
+++ b/main.html
@@ -62,6 +62,7 @@
 
   <script src="Javascript/Javascript-linking/index_link.js"></script>
   <script src="secret/javascript/secret.js"></script>
+  <script src="secret/javascript/secret2.js"></script>
 </body>
 
 </html>
